--- a/views/welcome.html
+++ b/views/welcome.html
@@ -127,6 +127,99 @@
         </div>
     </div>
 
+    <!-- Goplay Gift War Modal -->
+    <div
+        class="modal fade"
+        id="goplayGiftWar"
+        data-mdb-backdrop="static"
+        data-mdb-keyboard="false"
+        tabindex="-1"
+        aria-labelledby="goplayGiftWarLabel"
+        aria-hidden="true"
+    >
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropLabel">Buat gift war plugin URL</h5>
+                <button
+                    type="button"
+                    class="btn-close"
+                    data-mdb-dismiss="modal"
+                    aria-label="Close"
+                ></button>
+                </div>
+                <div class="modal-body">
+                    <form class="mb-4">
+                        <div class="col-md-12 mb-3">
+                            <label for="goplay-slug" class="form-label">Input goplay streaming URL</label>
+                            <div class="input-group">
+                                <span class="input-group-text" id="basic-addon3">https://goplay.co.id/live/</span>
+                                <input type="text" class="form-control" id="goplay-slug" placeholder="my-streaming-day3" />
+                            </div>
+                        </div>
+                        <div class="col-md-12 mb-4">
+                            <label class="form-label">Karakter Power</label>
+                            <div class="input-group">
+                                <input type="number" class="form-control" id="char-power" value="1000000" />
+                                <span class="input-group-text">Power</span>
+                            </div>
+                            <div class="form-text">Karakter power dapat diinput dengan number. 5.000.000 Power = Rp. 5.000.000 </div>
+                        </div>
+
+                        <div class="col-md-12 mb-3">
+                            <label class="form-label">Pilih Karakter 1</label>
+                            <div class="input-group">
+                                <input type="text" class="form-control" id="char-power" value="1000000" />
+                            </div>
+                        </div>
+                        <div class="col-md-12 mb-3">
+                            <label class="form-label">Pilih Gift Support Karakter 1</label>
+                            <div class="input-group">
+                                <input type="text" class="form-control" id="char-power" value="1000000" />
+                            </div>
+                        </div>
+                        <div class="col-md-12 mb-3">
+                            <label class="form-label">Pilih Karakter 2</label>
+                            <div class="input-group">
+                                <input type="text" class="form-control" id="char-power" value="1000000" />
+                            </div>
+                        </div>
+                        <div class="col-md-12 mb-3">
+                            <label class="form-label">Pilih Gift Support Karakter 2</label>
+                            <div class="input-group">
+                                <input type="text" class="form-control" id="char-power" value="1000000" />
+                            </div>
+                        </div>
+
+
+                        <div class="d-flex justify-content-end">
+                            <button type="button" class="btn btn-primary" id="create-goplay-gift-war">Buat</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer justify-content-start" >
+                    <label class="form-label">Result URL</label>
+                    <div class="col-md-12 mb-3">
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="goplay-gift-war-url" placeholder="URL" readonly />
+                            <button class="btn btn-outline-primary btn-copy" type="button" data-mdb-ripple-color="dark">
+                                Copy
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-md-12 mb-3">
+                        <div class="input-group" >
+                            <input type="text" class="form-control" id="goplay-gift-war-url-integration" placeholder="URL Integration" readonly />
+                            <button class="btn btn-outline-primary btn-copy" type="button" data-mdb-ripple-color="dark">
+                                Copy
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script>
         $(document).ready(function(){
